This NEWS file for dynrules covers a short overview about the latest changes.

0.0.9 2009-xx-xx
----------------
Python framework:
  * Added C API documentation.
  * Added C API tests.

0.0.8 2009-07-03
----------------
Python framework:
  * Fixed an import bug in LearnSystem.

0.0.7 2009-03-09
----------------
C++ framework:
  * Added missing RuleManagement::getMaxRules() method.
  * Fixed documentation comments.
  * RuleSet::updateWeights() method receives only a fitness argument now.

Python framework:
  * Many fixes for correct Python 3.x support.
  * CLearnSystem.create_script() now can handle file names properly.
  * Added API reference to documentations.

0.0.6 2008-12-16
----------------
Python framework:
  * Added Python 3.x support.
    Note that CLearnSystem.create_script() does not accept file names with
    Python 3.0, only file objects.
  
0.0.5 2008-11-21
----------------
C++ framework:
  * Fixed a bug in RuleSet::updateWeights() which caused wrong weight
    results.
  * Added missing MMapRuleManagement.h include to dynrules.h

Python framework:
  * Fixed name ambiguity for the Python and C implementation.
    The visible C types in the dynrules packages were renamed to
    CRule, CRuleSet and CLearnSystem, the C module types still have their
    original name.
  * Fixed C API slots.
  * Added RuleSet.find() and CRuleSet.find() methods.
  * New RuleManagement class.
  * New MMapRuleManagement class for in-memory rule management.

0.0.4 2008-11-20
----------------
C++ framework:
  * New RuleSet.find() method.
  * New abstract RuleManagement class for managing rules.
  * New MMapRuleManagement class for in-memory rule management.
  * Changed API to pass object pointers around instead of objects.

0.0.3 2008-11-09
----------------
C++ framework:
  * Added documentation.
  * Fixed a minor range issue in the RuleSet constructor that allowed
    minweight to be smaller than maxweight.
  * Fixed an int vs. double bug in the LearnSystem constructor.
